Added new CORS policy